turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:8: error: ':' expected but '(' found.
def tourne(rule(c):Char) {
               ^LangtonsAnt:38: error: identifier expected but '}' found.
}
^