turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def marqueSol(c:Color) { 
		setCouleurBrosse(c);
		baisseBrosse();
		leveBrosse()
}
		
def tourne(rule(c):Char) {
	if (rule(c) == "L") { gauche() }
	else if ( rule(c) == "R") { droite() }
}


def step(rule:Array[Char], colors:Array[Color]) {
	for ( x<- 0 to colors.length-1) {
		if (getCouleurSol() == colors(x)) {
			tourne(rule(c))
			marqueSol(colors(x+1))
			avance()
		}
	}
}